# urio

./: Cargo.toml  LICENSE  README.md
examples/: write.rs
src/: builder.rs  lib.rs  register.rs  sqe.rs
src/op/: cqe.rs  mod.rs  sqe.rs  storage.rs
src/queue/: cq.rs  mod.rs  sq.rs  sqe.rs  util.rs
src/sys/: mod.rs  syscall.rs
tests/: fsync.rs  nop.rs  poll.rs  poll_ring.rs  read_vectored.rs  read_write.rs
