[package]
name = "urio"
version = "0.1.0"
authors = ["신승훈 <seunghunee@gmail.com>"]
edition = "2018"
description = "A io_uring library in Rust"
documentation = "https://docs.rs/urio"
readme = "README.md"
homepage = "https://github.com/seunghunee/urio"
repository = "https://github.com/seunghunee/urio"
license = "MIT"
keywords = ["io_uring", "io", "async", "network", "filesystem"]
categories = [
    "asynchronous",
    "concurrency",
    "filesystem",
    "network-programming",
    "os::linux-apis",
]

[dependencies]
libc = "0.2"
bitflags = "1.3"
parking_lot = "0.11"

[dev-dependencies]
tempfile = "3"
